feat: suppress startup action if alt pressed